# openmpt

./: .Rbuildignore  .gitignore  404.html  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  DESCRIPTION  LICENSE.html  Makefile.am  Makefile.in  NAMESPACE  NEWS.md  README.Rmd  README.md  aclocal.m4  authors.html  cleanup  configure  configure.ac  index.html  pkgdown.yml  sitemap.xml
.github/workflows/: R-CMD-check-autoconf.yaml  R-CMD-check.yaml  pkgdown.yaml  rhub.yaml  test-coverage.yaml
R/: 01-online.R  controls.R  convert.R  cpp11.R  demo.R  format.R  info.R  io.R  modarchive.R  modland.R  names.R  nums.R  openmpt-package.R  pattern.R  pitch-tempo.R  play.R  portaudio.R  repeat.R  s3.R  state.R  subsong.R  volume-control.R
articles/: index.html  modarchive.html  openmpt-alternatives.html  openmpt-objects.html
inst/cyberrid/: LICENSE.md  cyberrid.mod
inst/include/: ropenmpt.hpp
man/: controls.Rd  convert_mod.Rd  demo_mod.Rd  format.Rd  get_duration_seconds.Rd  get_metadata.Rd  get_order_pattern.Rd  get_string.Rd  has_audio_device.Rd  modarchive.Rd  modarchive_download.Rd  modland.Rd  names.Rd  numbers.Rd  openmpt-package.Rd  openmpt_info.Rd  pattern.Rd  pitch-tempo.Rd  play.Rd  position.Rd  read_mod.Rd  render_param.Rd  repeat.Rd  s3methods.Rd  state.Rd  subsong.Rd  volume-control.Rd
news/: index.html
reference/: controls.html  convert_mod.html  demo_mod.html  get_duration_seconds.html  get_metadata.html  get_order_pattern.html  has_audio_device.html  index.html  modarchive.html  modland.html  names.html  numbers.html  openmpt-package.html  openmpt_info.html  pattern.html  pitch-tempo.html  play.html  position.html  read_mod.html  render_param.html  repeat.html  s3methods.html  state.html  subsong.html  volume-control.html
src/: Makevars.in  Makevars.ucrt  Makevars.win  ap_helpers.cpp  audio.cpp  code.cpp  cpp11.cpp  ctl.cpp  format.cpp  get_mod.cpp  helpers.cpp  info.cpp  io.cpp  module_ext.cpp  names.cpp  render.cpp  render_params.cpp  repeat.cpp  ropenmpt.hpp  set.cpp  state.cpp  subsong.cpp
tests/: testthat.R
tests/testthat/: test-dev.R  test-examples.R  test-exceptions.R  test-play.R  test-render.R  test-s3.R
tools/: winlibs.R
vignettes/: modarchive.Rmd  openmpt-alternatives.Rmd  openmpt-objects.Rmd
